updates create new user and add Product
