# src/app.js
@@ -1,18 +1,20 @@
 // api/index.js
 const express = require("express");
-const serverless = require("serverless-http");
+// const serverless = require("serverless-http");
 const swaggerUi = require("swagger-ui-express");
 const YAML = require("yamljs");
 const path = require("path");
 // Create an Express app
 const app = express();
-const PORT = 3000;
+const PORT = 3001;
+
 const cors = require('cors')
 const myRoute = require('./routes/mainRoutes');
 
-// Middleware
+
 app.use(express.json({ limit: '50mb' }));
-app.use(express.urlencoded({ extended: true }))
+app.use(express.urlencoded({ extended: true }));
+
 app.use(
     cors({
       origin: "*",
@@ -21,9 +23,13 @@ app.use(
   );
 app.use('/', myRoute);
 
-app.get('/health', async (req, res) => {
+app.get('/', async (req, res) => {
+    // let colors = await color.findAll({});
+    //     let sizes = await size.findAll({});
+    //     let categories = await category.findAll({});
+    //     console.log(colors, sizes, categories);
     console.info("/health api called at", new Date().toISOString());
-    res.status(200).send("Welcome to root URL of Server");
+    res.status(200).send("Welcome to health URL of Server");
 });
 
 // Swagger setup
